assets/prometheus-connector/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: skydive-prometheus-connector
  name: skydive-prometheus-connector
spec:
  ports:
    - name: api
      port: 9100
      protocol: TCP
      targetPort: 9100
  selector:
    app: skydive-prometheus-connector
    tier: prometheus-connector
  sessionAffinity: None
  type: NodePort
  ownerReferences:
    - apiVersion: skydive-group.example.com/v1
      controller: true
      blockOwnerDeletion: true
      kind: Skydive
      name: skydive-sample
