assets/prometheus-connector/route.yaml
apiVersion: v1
kind: Route
metadata:
  labels:
    app: skydive-prometheus-connector
  name: skydive-prometheus-connector
spec:
  port:
    targetPort: api
  to:
    kind: Service
    name: skydive-prometheus-connector
    weight: 100
  wildcardPolicy: None
  ownerReferences:
    - apiVersion: skydive-group.example.com/v1
      controller: true
      blockOwnerDeletion: true
      kind: Skydive
      name: skydive-sample
